--- a/metasploit/full/Dockerfile
+++ b/metasploit/full/Dockerfile
@@ -1,23 +1,28 @@
-FROM ruby:2.1.6-slim
+FROM ruby:2.1.6
 
 MAINTAINER Daniel Romero <infoslack@gmail.com>
 
 RUN apt-get update && apt-get -y install \
-        git \
         bison \
         libbison-dev \
-        libpq-dev \
         libpcap-dev \
         libpcap0.8 \
         libpcap0.8-dev \
         postgresql-client \
-        build-essential \
-        libsqlite3-dev \
     && rm -rf /var/lib/apt/lists/*
+
+ENV NMAP_VERSION 6.47
+
+RUN curl -O http://nmap.org/dist/nmap-${NMAP_VERSION}.tar.bz2 \
+        && bzip2 -cd nmap-${NMAP_VERSION}.tar.bz2 | tar xvf - \
+        && cd nmap-${NMAP_VERSION} \
+        && ./configure && make && make install \
+        && cd \
+        && rm -rf nmap-${NMAP_VERSION}
 
 RUN git clone --depth=1 https://github.com/rapid7/metasploit-framework.git \
         && cd metasploit-framework \
-        && bundle install --without test coverage development
+        && bundle install
 
 ADD files/setup.sh /
 RUN chmod +x /setup.sh
